--- a/Mazes/Mazes.csproj
+++ b/Mazes/Mazes.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Magick.NET-Q8-x64" Version="14.8.2" />
+      <PackageReference Include="Raylib-cs" Version="7.0.1" />
     </ItemGroup>
 
 </Project>
